@@ -13,5 +13,5 @@ gst_test_LDADD = @GLIB_LIBS@ @GSTREAMER_LIBS@
 mb_test_SOURCES = mb-test.c  ../src/sj-musicbrainz.c
 mb_test_LDADD = @GLIB_LIBS@ @MUSICBRAINZ_LIBS@
 
-glade_test_SOURCES = glade-test.c ../src/sj-error.c ../src/sj-gstreamer.c ../src/sj-musicbrainz.c ../src/bacon-cd-selection.c ../src/cd-drive.c
+glade_test_SOURCES = glade-test.c ../src/sj-error.c ../src/sj-extractor.c ../src/sj-musicbrainz.c ../src/bacon-cd-selection.c ../src/cd-drive.c
 glade_test_LDADD = @MUSICBRAINZ_LIBS@ @GSTREAMER_LIBS@ @LIBGLADE_LIBS@ @GNOME_LIBS@
